frontpage-css - Fix visible buttons

--- a/website/style/style.scss
+++ b/website/style/style.scss
@@ -47,7 +47,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
   padding: 10px;
 }
 
